--- a/src/Partials/_header.scss
+++ b/src/Partials/_header.scss
@@ -1,8 +1,6 @@
 
 
-.container{
-  @include myFlex;
-}
+
 
 
 header{
@@ -14,7 +12,7 @@ header{
 
   .logo{
     @include myFlexSpace;
-    width: 140px;
+    width: 120px;
 
     h2{
       font-weight: 300;
@@ -31,14 +29,17 @@ header{
   }
 
   button{
-    padding: 10px;
+    padding: 8px;
     border: 1px solid blue;
     border-radius: 10px;
-    width: 100px;
+    width: 110px;
     font-weight: 600;
 
     a{
+      width: 90%;
+      margin-left: 5%;
       @include myFlexSpace;
+      color: $link-color;
     }
 
     img{
