--- a/src/app.scss
+++ b/src/app.scss
@@ -2,7 +2,7 @@
 @import "Partials/common";
 @import "Partials/header";
 @import "Partials/intro";
-
+@import "Partials/section1";
 
 
 
@@ -12,10 +12,11 @@
   margin: 0;
   box-sizing: border-box;
   color: #58402c;
+  font-family: 'Roboto', sans-serif;
 }
 
 h1{
-  font-size: 55px;
+  font-size: 50px;
 }
 h2{
   font-size: 25px;
