--- a/src/app.scss
+++ b/src/app.scss
@@ -3,7 +3,7 @@
 @import "Partials/header";
 @import "Partials/intro";
 @import "Partials/section1";
-
+@import "Partials/central-section";
 
 
 // REGOLE GENERALI
