--- a/src/Partials/_central-section.scss
+++ b/src/Partials/_central-section.scss
@@ -26,6 +26,7 @@
     a{
       position: absolute;
       padding-bottom: 50px;
+      color: $link-color;
     }
 
 
@@ -67,6 +68,7 @@
     a{
       position: absolute;
       padding-bottom: 50px;
+      color: $link-color;
     }
 
 
