--- a/src/app.scss
+++ b/src/app.scss
@@ -4,14 +4,14 @@
 @import "Partials/intro";
 @import "Partials/section1";
 @import "Partials/central-section";
-
+@import "Partials/blog-section";
 
 // REGOLE GENERALI
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  color: #58402c;
+  color: #040F0F;
   font-family: 'Roboto', sans-serif;
 }
 
