--- a/src/app.scss
+++ b/src/app.scss
@@ -5,6 +5,8 @@
 @import "Partials/section1";
 @import "Partials/central-section";
 @import "Partials/blog-section";
+@import "Partials/footer";
+
 
 // REGOLE GENERALI
 *{
